update fitur (graph, paginasi responsive)

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -33,3 +33,13 @@
     />
   </label>
 </div>
+
+<section class="chart-section">
+  <h2 class="mbsm">Visualisasi Keuangan</h2>
+  <div class="chart-wrapper">
+    <canvas id="chartPie"></canvas>
+    <canvas id="chartBar"></canvas>
+  </div>
+</section>
+
+
