--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </main>
 
     <!-- SCRIPT -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="js/app.js"></script>
   </body>
 </html>
