--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -20,7 +20,10 @@
     <p>💵 Saldo: <span id="saldo">0</span></p>
   </div>
 
-  <h3>📋 Daftar Transaksi</h3>
+  <div class="flex content-between item-center">
+    <h3>📋 Daftar Transaksi</h3>
+    <span class="delete-btn">Hapus Semua</span>
+  </div>
   <ul id="daftar-transaksi" class="daftar-transaksi"></ul>
   <div id="pagination" class="pagination-container"></div>
 </section>
