--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -20,9 +20,8 @@
     <p>💵 Saldo: <span id="saldo">0</span></p>
   </div>
 
-  <div class="flex content-between item-center">
+  <div class="flex content-between item-center button-delete">
     <h3>📋 Daftar Transaksi</h3>
-    <span class="delete-btn">Hapus Semua</span>
   </div>
   <ul id="daftar-transaksi" class="daftar-transaksi"></ul>
   <div id="pagination" class="pagination-container"></div>
