--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -21,6 +21,22 @@
   </div>
 
   <h3>📋 Daftar Transaksi</h3>
-  <ul id="daftar-transaksi" class="daftar-transaksi"></ul>
+<!--  <ul id="daftar-transaksi" class="daftar-transaksi"></ul>-->
+  <div id="transaksi-table">
+    <table>
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>Kategori</th>
+          <th>Jenis</th>
+          <th>Jumlah</th>
+          <th>Tanggal</th>
+          <th>Deskripsi</th>
+          <th>Aksi</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
   <div id="pagination" class="pagination-container"></div>
 </section>
