update perbaikan kode error

--- a/pages/kategori.html
+++ b/pages/kategori.html
@@ -10,16 +10,17 @@
       <button type="submit" name="btn-kategori">Simpan</button>
     </form>
 
-    <table class="tabel-kategori">
-      <thead>
-      <tr>
-        <th>No</th>
-        <th>Nama Kategori</th>
-        <th>Aksi</th>
-      </tr>
-      </thead>
-      <tbody id="daftar-kategori"></tbody>
-    </table>
+    <div id="kategori-table">
+      <table class="tabel-kategori">
+        <thead>
+          <tr>
+            <th>No</th>
+            <th>Nama Kategori</th>
+            <th>Aksi</th>
+          </tr>
+        </thead>
+        <tbody id="daftar-kategori"></tbody>
+      </table>
+    </div>
   </section>
-
 </div>
