menambahkan paginasi di riwayat

--- a/pages/riwayat.html
+++ b/pages/riwayat.html
@@ -16,5 +16,6 @@
         <tbody id="riwayat-body"></tbody>
       </table>
     </div>
+    <div id="pagination" class="pagination-container"></div>
   </section>
 </div>
