menambah fitur print

--- a/pages/riwayat.html
+++ b/pages/riwayat.html
@@ -1,6 +1,11 @@
 <div class="mtxl">
   <section class="riwayat-section">
-    <h2>📋 Riwayat Transaksi</h2>
+    <div class="flex beetwen mb">
+      <h2>📋 Riwayat Transaksi</h2>
+      <button id="btnPrintRiwayat" class="print" type="button">
+        🖨️ Print riwayat
+      </button>
+    </div>
     <div class="riwayat-container">
       <table class="riwayat-table">
         <thead>
