menambahkan export CSV dengan opsi

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li data-page="kategori">📂 Kategori</li>
         <li data-page="riwayat">📋 Riwayat</li>
         <li data-page="laporan">📈 Laporan</li>
+        <li data-page="setting">⚙️ Settings</li>
         <li data-page="logout">🚪 Logout</li>
       </ul>
     </nav>
