perbaikan kode lanjut

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li data-page="riwayat">📋 Riwayat</li>
         <li data-page="laporan">📈 Laporan</li>
         <li data-page="setting">⚙️ Settings</li>
+        <li data-page="info"> ℹ️ Info App</li>
         <li data-page="logout">🚪 Logout</li>
       </ul>
     </nav>
