--- a/pages/riwayat.html
+++ b/pages/riwayat.html
@@ -21,7 +21,7 @@
       <table class="riwayat-table">
         <thead>
           <tr>
-            <th>No</th>
+            <th style="width: 30px; text-align: center">No</th>
             <th>Tanggal</th>
             <th>Kategori</th>
             <th>Jumlah</th>
