menambhkan detail data saat graph di klick

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -71,6 +71,13 @@
     <canvas id="chart-bar3" height="150"></canvas>
   </div>
 </div>
+<div id="grafik-detail">
+  <h4 id="grafik-detail-title" class="mb">Detail Transaksi</h4>
+  <ul id="grafik-detail-list"></ul>
+  <button class="btn-close absolute" type="button" id="closed">
+    <i class="material-icons">close</i>
+  </button>
+</div>
 
 <div class="flex gap-1 flex-wrap over-auto-x" style="margin: 1rem">
   <div class="card" style="flex: 1 42%">
