--- a/login.html
+++ b/login.html
@@ -6,13 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - KasKu</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="login-page">
 <div class="login-container relative">
   <h1 class="mb">KasKu 💰</h1>
   <form id="loginForm">
     <input type="text" name="username" placeholder="Username" required />
-    <input type="password" name="password" placeholder="Password" required />
+    <div class="relative mb">
+      <input class="mb-0" type="password" name="password" placeholder="Password" required />
+      <button type="button" class="btn-password absolute">
+        <i class="material-icons icons-small" style="line-height: 1.3">visibility_off</i>
+      </button>
+    </div>
     <button type="submit" class="btn">Login</button>
     <button id="toggle-theme" class="absolute btn-theme">🌙</button>
   </form>
