menambhkan detail data saat graph di klick

--- a/pages/kategori.html
+++ b/pages/kategori.html
@@ -6,7 +6,10 @@
     </div>
     <form id="form-kategori">
       <input type="hidden" name="id" />
-      <input type="text" name="nama" placeholder="Nama kategori" required />
+      <div class="input-shortchut">
+        <input type="text" name="nama" placeholder="Nama kategori" required />
+      </div>
+
       <button type="submit" name="btn-kategori">Simpan</button>
     </form>
 
