--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -22,32 +22,32 @@
 
   <h3 class="mb">📋 Daftar Transaksi</h3>
 
-    <form id="form-filter">
-      <div class="flex gap-1:gap item-center:stretch columns:mobile">
-        <label>
-          Dari:
-          <input type="date" id="filter-dari">
-        </label>
-        <label>
-          Sampai:
-          <input type="date" id="filter-sampai">
-        </label>
-        <label>
-          Kategori:
-          <select id="filter-kategori">
-            <option value="">Semua Kategori</option>
-          </select>
-        </label>
-        <button type="submit" class="btn-filter">Terapkan Filter</button>
-        <button type="button" class="btn-reset">Reset</button>
-      </div>
-    </form>
+  <form id="form-filter">
+    <div class="flex gap-1:gap item-center:stretch columns:mobile">
+      <label>
+        Dari:
+        <input type="date" id="filter-dari" />
+      </label>
+      <label>
+        Sampai:
+        <input type="date" id="filter-sampai" />
+      </label>
+      <label>
+        Kategori:
+        <select id="filter-kategori">
+          <option value="">Semua Kategori</option>
+        </select>
+      </label>
+      <button type="submit" class="btn-filter">Terapkan Filter</button>
+      <button type="button" class="btn-reset">Reset</button>
+    </div>
+  </form>
 
   <div id="transaksi-table">
     <table>
       <thead>
         <tr>
-          <th>No</th>
+          <th class="text-cente" style="width: 30px">No</th>
           <th>Kategori</th>
           <th>Jenis</th>
           <th>Jumlah</th>
