--- a/pages/kategori.html
+++ b/pages/kategori.html
@@ -6,6 +6,8 @@
     </div>
     <form id="form-kategori">
       <input type="hidden" name="id" />
+      <input type="color" name="warna" value="#3498db" />
+<!--      <input type="text" name="ikon" placeholder="ICON: 🚗"/>-->
       <div class="input-shortchut">
         <input type="text" name="nama" placeholder="Nama kategori" required />
       </div>
@@ -17,7 +19,7 @@
       <table class="tabel-kategori">
         <thead>
           <tr>
-            <th>No</th>
+            <th style="width: 30px;">No</th>
             <th>Nama Kategori</th>
             <th>Aksi</th>
           </tr>
