--- a/pages/info.html
+++ b/pages/info.html
@@ -1,85 +1,45 @@
 <div class="mtxl">
-  <section class="fitur-section">
-    <h1>📌 Aplikasi Manajemen Keuangan "KasKu" – Fitur Lengkap</h1>
+  <section class="informasi-aplikasi">
+    <h1>Informasi Aplikasi Buku Kas</h1>
 
-    <h2>1. Autentikasi Lokal (Login Simulasi)</h2>
+    <p>Aplikasi Buku Kas ini dirancang untuk membantu Anda mencatat, mengelola, dan memantau transaksi keuangan secara efisien dan mudah. Berikut fitur-fitur yang tersedia:</p>
+
+    <h2>Fitur Utama</h2>
     <ul>
-      <li>Sistem login sederhana berbasis <code>localStorage</code>.</li>
-      <li>Menyimpan sesi pengguna secara lokal di browser.</li>
-      <li>Tidak memerlukan database eksternal.</li>
+      <li><strong>Manajemen Transaksi:</strong> Tambah, edit, hapus transaksi dengan kategori, tanggal, dan nominal yang fleksibel.</li>
+      <li><strong>Manajemen Kategori:</strong> Tambah kategori baru dengan input multi-data sekaligus, pilih warna dan ikon untuk tiap kategori.</li>
+      <li><strong>Filter:</strong> Filter transaksi berdasarkan <strong>tanggal</strong> dan <strong>kategori</strong>.</li>
+      <li><strong>Grafik Interaktif:</strong> Menampilkan grafik pemasukan dan pengeluaran per hari.</li>
+      <li><strong>Export:</strong> Export data transaksi ke file <code>.csv</code>.</li>
+      <li><strong>Print:</strong> Cetak riwayat transaksi lengkap (semua halaman, meskipun data dipaginasi).</li>
+      <li><strong>Backup & Restore:</strong> Backup seluruh data dalam format <code>JSON</code> dan import kembali jika diperlukan.</li>
+      <li><strong>Dark Mode:</strong> Tersedia tampilan tema gelap untuk kenyamanan mata pengguna.</li>
     </ul>
 
-    <h2>2. Dashboard Ringkasan</h2>
+    <h2>Fitur Kategori</h2>
     <ul>
-      <li>Menampilkan total pemasukan, pengeluaran, dan saldo akhir.</li>
-      <li>Dilengkapi grafik interaktif menggunakan <strong>Chart.js</strong>:
-        <ul>
-          <li>📈 Line Chart</li>
-          <li>Dukungan multi-line (pemasukan & pengeluaran)</li>
-          <li>Mendukung jenis grafik lain seperti <code>bar</code>, dll</li>
-        </ul>
-      </li>
+      <li><strong>Input Multi:</strong> Bisa memasukkan banyak kategori sekaligus dengan memisahkan nama menggunakan koma (<code>,</code>).</li>
+      <li><strong>Ikon & Warna:</strong> Setiap kategori dapat memilih ikon dan warna sendiri untuk memudahkan identifikasi saat melihat data.</li>
+      <li><strong>Pembaruan Otomatis:</strong> Jika nama kategori sudah ada, maka akan memperbarui data lama berdasarkan nama tersebut, tetap mempertahankan ID lama.</li>
     </ul>
 
-    <h2>3. Formulir Input Transaksi</h2>
+    <h2>Cara Penggunaan Input Multi Kategori</h2>
+    <p>Saat menambahkan kategori baru:</p>
     <ul>
-      <li>Input: tanggal, nominal, jenis, kategori, catatan.</li>
-      <li>Validasi input wajib & nominal positif.</li>
-      <li>Fitur edit & batal edit.</li>
+      <li>Gunakan tanda koma (<code>,</code>) untuk memisahkan nama kategori, contoh: <code>Transportasi, Makan, Belanja</code>.</li>
+      <li>Gunakan tanda (<code>=></code>) untuk menyinkronkan ikon dengan kategori dan gunakan tanda koma (<code>,</code>) untuk memisahkan nama kategori contoh: <code>Transportasi => 🚗, Makanan => 🍔, Minuman => 🥛</code></li>
+      <li>untuk warna kasih sesuai keinginan anda.</li>
     </ul>
 
-    <h2>4. Daftar Transaksi</h2>
+    <h2>Catatan</h2>
     <ul>
-      <li>Tabel interaktif dengan pagination.</li>
-      <li>Fitur edit dan hapus transaksi.</li>
-      <li>Kolom: Nomor, Kategori, Jenis, Nominal, Tanggal, Catatan.</li>
+      <li>Pastikan selalu melakukan backup berkala untuk menghindari kehilangan data penting.</li>
+      <li>Gunakan fitur Dark Mode untuk kenyamanan penggunaan pada malam hari.</li>
+      <li>Jika Anda mengedit nama kategori, pastikan juga memperbarui data transaksi yang terkait.
+        Misalnya, jika kategori <strong>Pakaian</strong> diubah menjadi <strong>Pakaians</strong>, maka data transaksi lama dengan nama "Pakaian" tidak akan tersinkronisasi dengan ikon baru, sehingga ikon pada transaksi tersebut bisa hilang.</li>
+      <li>Setiap kali ada fitur baru yang ditambahkan, pastikan Anda membaca informasi dan panduan terbaru agar tidak melewatkan perubahan penting.</li>
     </ul>
 
-    <h2>5. Kategori Transaksi</h2>
-    <ul>
-      <li>Dikelola lewat <code>localStorage</code>.</li>
-      <li>Ditampilkan dalam dropdown input transaksi.</li>
-      <li>Dimuat otomatis saat halaman dibuka.</li>
-    </ul>
-
-    <h2>6. Riwayat Transaksi</h2>
-    <ul>
-      <li>Halaman khusus semua transaksi lengkap.</li>
-      <li>Fitur tambahan:
-        <ul>
-          <li>🖨️ Print seluruh transaksi</li>
-          <li>📤 Export CSV (semua, pemasukan, pengeluaran)</li>
-        </ul>
-      </li>
-    </ul>
-
-    <h2>7. Fungsi Modular & Reusable</h2>
-    <ul>
-      <li><code>renderGrafik()</code> mendukung multi-line & multi-tipe grafik.</li>
-      <li><code>exportToCSV()</code> fleksibel untuk berbagai data.</li>
-      <li><code>printTabel()</code> bisa dipakai untuk semua jenis tabel.</li>
-    </ul>
-
-    <h2>8. Tampilan Modern & Responsif</h2>
-    <ul>
-      <li>Desain bersih dan ringan untuk semua perangkat.</li>
-      <li>Mendukung pengembangan dark mode di tahap berikutnya.</li>
-    </ul>
-
-    <h2>🔧 Teknologi yang Digunakan</h2>
-    <ul>
-      <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
-      <li><strong>Penyimpanan:</strong> localStorage</li>
-      <li><strong>Grafik:</strong> Chart.js</li>
-      <li><strong>Utility:</strong> Native Print, Export CSV</li>
-    </ul>
-
-    <h2>🚀 Pengembangan Selanjutnya (Opsional)</h2>
-    <ul>
-      <li>📅 Filter berdasarkan tanggal & kategori ✅</li>
-      <li>📥 Export ke Excel / PDF</li>
-      <li>📱 Versi PWA (offline & installable)</li>
-      <li>🔒 Proteksi data dengan PIN/password</li>
-    </ul>
   </section>
+
 </div>
