menambahkan halaman setting

--- a/pages/kategori.html
+++ b/pages/kategori.html
@@ -83,7 +83,8 @@
       </ul>
       <hr class="mb">
       <h3 class="mb">⚠️ 6. Peringatan</h3>
-      <p><strong>Jika Anda mengedit nama kategori, pastikan juga memperbarui data transaksi yang terkait. Misalnya:</strong>
+      <p>
+        <strong>Jika Anda mengedit nama kategori, pastikan juga memperbarui data transaksi yang terkait. Misalnya:</strong>
       <pre class="badge mb">👕 Pakaian</pre>
       diubah menjadi
       <pre class="badge mb">👕 Pakaians</pre>
