menambah fitur judul untuk print data di halaman riwayat

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -1,19 +1,19 @@
 <div class="mtxl">
   <section class="dashboard">
     <div class="stat-box saldo">
-      <h3>Saldo</h3>
+      <h3 class="flex gap-1 item-center"><i class="material-icons">wallet</i><span>Saldo</span></h3>
       <p id="saldo">Rp 0</p>
     </div>
     <div class="stat-box masuk">
-      <h3>Pemasukan</h3>
+      <h3 class="flex gap-1 item-center"><i class="material-icons">attach_money</i><span>Pemasukan</span></h3>
       <p id="pemasukan">Rp 0</p>
     </div>
     <div class="stat-box keluar">
-      <h3>Pengeluaran</h3>
+      <h3 class="flex gap-1 item-center"><i class="material-icons">money_off</i><span>Pengeluaran</span></h3>
       <p id="pengeluaran">Rp 0</p>
     </div>
     <div class="stat-box jumlah">
-      <h3>Jumlah Transaksi</h3>
+      <h3 class="flex gap-1 item-center"><i class="material-icons">receipt_long</i><span>Jumlah Transaksi</span></h3>
       <p id="jumlah-transaksi">0</p>
     </div>
   </section>
